--- a/trabajofinal/css/miestilo.css
+++ b/trabajofinal/css/miestilo.css
@@ -109,3 +109,34 @@ dd {
 	border: 1px solid #000000;
 }
 /* interés */
+
+div#footer {
+    display: inline-block;
+    position: relative;
+    /* background-color: #231234; */
+    align-content: center;
+    left: 20%;
+}
+div#chistedeldia {
+    position: relative;
+    font-size: 1.2em;
+    text-align: center;
+}
+.hojadevida {
+    display: block;
+    position: relative;
+    text-align: center;
+    margin: 0;
+}
+
+div#centro_exit {
+    font-size: 2.5rem;
+	text-align: center;
+	text-transform: uppercase;
+}
+div#centro_exit_pequeno{
+	font-size: 1rem;
+	text-align: center;
+	font-family: cursive;
+	text-transform: capitalize;
+}
